@@ -23,6 +23,13 @@ function embed_templates_schema() {
         'unsigned' => TRUE,
         'not null' => TRUE,
       ),
+      'author' => array(
+        'description' => 'The user who created the embed.',
+        'type' => 'varchar',
+        'length' => 255,
+        'not null' => TRUE,
+        'default' => 'N/A',
+      ),
       'name' => array(
         'description' => 'Human readable name of the embed.',
         'type' => 'varchar',
@@ -53,6 +60,13 @@ function embed_templates_schema() {
         'length' => '255',
         'not null' => TRUE,
       ),
+      'updated' => array(
+        'type' => 'int',
+        'description' => 'Timestamp when the embed was last updated.',
+        'not null' => TRUE,
+        'unsigned' => TRUE,
+        'default' => 0,
+      ),
       'data' => array(
         'description' => 'Custom options for embed.',
         'type' => 'blob',
@@ -63,4 +77,34 @@ function embed_templates_schema() {
     'primary key' => array('id'),
   );
   return $schema;
+}
+
+/**
+ * Implements hook_update_N().
+ *
+ * Add uid and updated fields.
+ */
+function embed_templates_update_7001() {
+
+  if (!db_field_exists('embed_templates', 'author')) {
+    $spec = array(
+      'description' => 'The user who created the embed.',
+      'type' => 'varchar',
+      'length' => 255,
+      'not null' => TRUE,
+      'default' => 'N/A',
+    );
+    db_add_field('embed_templates', 'author', $spec);
+  }
+
+  if (!db_field_exists('embed_templates', 'updated')) {
+    $spec = array(
+      'description' => 'Timestamp when the embed was last updated.',
+      'type' => 'int',
+      'not null' => TRUE,
+      'unsigned' => TRUE,
+      'default' => 0,
+    );
+    db_add_field('embed_templates', 'updated', $spec);
+  }
 }
