@@ -5,9 +5,8 @@ package = Embed Templates
 dependencies[] = embed_templates
 dependencies[] = block
 
-; Information added by Drupal.org packaging script on 2017-10-10
-version = "7.x-1.0-beta4"
+; Information added by Drupal.org packaging script on 2018-05-04
+version = "7.x-1.0-beta4+1-dev"
 core = "7.x"
 project = "embed_templates"
-datestamp = "1507662246"
-
+datestamp = "1525470484"
