@@ -1,17 +1,14 @@
 <!--
-Start of DoubleClick Floodlight Tag: Please do not remove
-Activity name of this tag: <?php print check_plain($variables['activity']); ?>
-URL of the webpage where the tag is expected to be placed: <?php print check_plain($variables['url']); ?>
+Start of the DoubleClick Floodlight Tag: Please do not remove
+Activity name of this tag: <?php print check_plain($variables['activity']); ?>.
+URL of the webpage where the tag is expected to be placed: <?php print check_plain($variables['page_location']); ?>.
 This tag must be placed between the <body> and </body> tags, as close as possible to the opening tag.
-Creation Date: <?php print check_plain($variables['creation']) ?>
+Creation Date: <?php print check_plain($variables['creation']); ?>.
 -->
 <script type="text/javascript">
   var axel = Math.random() + "";
   var a = axel * 10000000000000;
-  document.write('<iframe src="https://<?php print check_plain($variables['account_id']); ?>.fls.doubleclick.net/activityi;src=<?php print check_plain($variables['account_id']); ?>;type=invmedia;cat=buyulyok;ord=' + a + '?" width="1" height="1" frameborder="0" style="display:none"></iframe>');
-</script>
-<noscript>
-  <iframe src="https://<?php print check_plain($variables['account_id']); ?>.fls.doubleclick.net/activityi;src=<?php print check_plain($variables['account_id']); ?>;type=invmedia;cat=buyulyok;ord=1?" width="1" height="1" frameborder="0" style="display:none"></iframe>
-</noscript>
-<!-- End of DoubleClick Floodlight Tag: Please do not remove -->
+  document.write('<iframe src="https://<?php print check_plain($variables['account_id']); ?>.fls.doubleclick.net/activityi;src=<?php print check_plain($variables['account_id']); ?>;type=<?php print check_plain($variables['type']); ?>;cat=<?php print check_plain($variables['category']); ?>;dc_lat=;dc_rdid=;tag_for_child_directed_treatment=;ord=' + a + '?" width="1" height="1" frameborder="0" style="display:none"></iframe>'); </script>
+<iframe src="https://<?php print check_plain($variables['account_id']); ?>.fls.doubleclick.net/activityi;src=<?php print check_plain($variables['account_id']); ?>;type=<?php print check_plain($variables['type']); ?>;cat=<?php print check_plain($variables['category']); ?>;dc_lat=;dc_rdid=;tag_for_child_directed_treatment=;ord=1?" width="1" height="1" frameborder="0" style="display:none"></iframe>
 
+<!-- End of DoubleClick Floodlight Tag: Please do not remove -->
