@@ -11,9 +11,8 @@ dependencies[] = et_unthemed_page
 dependencies[] = et_page_top_bottom
 dependencies[] = et_tracking_pixels
 
-; Information added by Drupal.org packaging script on 2017-10-10
-version = "7.x-1.0-beta4"
+; Information added by Drupal.org packaging script on 2018-05-04
+version = "7.x-1.0-beta4+1-dev"
 core = "7.x"
 project = "embed_templates"
-datestamp = "1507662246"
-
+datestamp = "1525470484"
